[build_sphinx]
all_files = 1
build-dir = build/sphinx
source-dir = doc

[metadata]
name = libra
author = David Shrewsbury <shrewsbury.dave@gmail.com>, Andrew Hutchings <andrew@linuxjedi.co.uk>
summary = Python LBaaS Gearman Worker and Pool Manager
description-file = README
home-page = http://pypi.python.org/pypi/libra
classifier =
        Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
	libra

[global]
setup-hooks =
        pbr.hooks.setup_hook

[entry_points]
console_scripts =
	libra_worker = libra.worker.main:main
	libra_pool_mgm = libra.mgm.mgm:main
	libra_api = libra.api.app:main
        libra_admin_api = libra.admin_api.app:main

libra.mgm_drivers =
        dummy = libra.mgm.drivers.impl_dummy:DummyDriver
        hp_rest = libra.mgm.drivers.impl_hp_rest:HPRestDriver

libra.mgm_schedulers =
        build = libra.mgm.schedulers.build:BuildNodes
        submit = libra.mgm.schedulers.submit:SubmitNodes