[metadata]
name = libra
author = David Shrewsbury <shrewsbury.dave@gmail.com>, Andrew Hutchings <andrew@linuxjedi.co.uk>
summary = Python LBaaS Gearman Worker and Pool Manager
description-file = README
home-page = http://pypi.python.org/pypi/libra
classifier =
        Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
	libra

[entry_points]
console_scripts =
	libra_worker = libra.worker.main:main
	libra_pool_mgm = libra.mgm.service:main
	libra_api = libra.api.app:main
        libra_admin_api = libra.admin_api.app:main

libra.gearman_encoders =
        json = libra.common.gearman_.encoders:JSONDataEncoder

libra.rpc_plugins =
        gearman = libra.common.gearman_:GearmanWorker
        gearman_fake = libra.common.gearman_.fake:FakeWorker

[build_sphinx]
all_files = 1
build-dir = build/sphinx
source-dir = doc
